tests/sksl/errors/SwitchWithContinueInside.glsl
### Compilation failed:

error: 4: continue statement cannot be used in a switch
error: 5: continue statement cannot be used in a switch
2 errors
